# VoxelEngine

./: CMakeLists.txt  LICENSE  README.md  Renderer.sln
Demo/: CMakeLists.txt
Demo/Shaders/: RainbowRect.frag  RainbowRect.vert
Demo/src/: main.cpp
Renderer/: Renderer.vcxproj  Renderer.vcxproj.filters  SVO.txt  imgui.ini
Renderer/src/: main.cpp
Renderer/src/Headers/: Camera.cpp  Camera.hpp  ChunkSystem.cpp  ChunkSystem.hpp  (+8 more)
VoxelEngine/: CMakeLists.txt
VoxelEngine/.cache/clangd/index/: pch.cpp.941E87B23A501BE7.idx  pch.h.2846E3113B69C927.idx  test.cpp.29DE6D0AFB1CCB3A.idx  test.hpp.7CA6AA2E6F2855D2.idx
VoxelEngine/cmake/: dependencies.cmake
VoxelEngine/include/: pch.h
VoxelEngine/include/VoxelEngine/: Engine.hpp
VoxelEngine/include/VoxelEngine/Bindable/: Bindable.hpp  SmartBinder.hpp
VoxelEngine/include/VoxelEngine/Buffer/: Buffers.hpp  VAO.hpp  glBuffer.hpp
VoxelEngine/include/VoxelEngine/Drawable/: Drawable.hpp
VoxelEngine/include/VoxelEngine/Drawable/Primitives/: Quad.hpp
VoxelEngine/include/VoxelEngine/Engine/: Engine.hpp  EngineService.hpp
VoxelEngine/include/VoxelEngine/Game/: Game.hpp
VoxelEngine/include/VoxelEngine/Input/: Input.hpp
VoxelEngine/include/VoxelEngine/Maths/: mat.hpp  units.hpp  vec.hpp
VoxelEngine/include/VoxelEngine/Shaders/: ComputeShader.hpp  Shader.hpp
VoxelEngine/include/VoxelEngine/Window/: Window.hpp
VoxelEngine/include/VoxelEngine/test/: test.hpp
VoxelEngine/include/VoxelEngine/utils/: assert.hpp  error.hpp  types.hpp  version.hpp
VoxelEngine/src/: pch.cpp
VoxelEngine/src/Buffer/: Buffers.cpp  glBuffer.cpp
VoxelEngine/src/Engine/: Engine.cpp
VoxelEngine/src/Input/: Input.cpp
VoxelEngine/src/Primitives/: Quad.cpp
VoxelEngine/src/Shaders/: ComputeShader.cpp  Shader.cpp
VoxelEngine/src/VertexArray/: VAO.cpp
VoxelEngine/src/Window/: Window.cpp
VoxelEngine/src/test/: test.cpp
VoxelEngine/src/utils/: types.cpp
(+15 files in other folders)
